--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,8 @@
-David Paleino <d.paleino@gmail.com>
+Former maintainers
+------------------
+1998-2000, Lars Wirzenius <liw@iki.fi>
+2001-2007, Tommi Virtanen <tv@debian.org>
+
+Current maintainer
+------------------           
+2008-now, David Paleino <d.paleino@gmail.com>
